--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,1 +1,1 @@
-<p>app-footer works!</p>
+<img src="https://static-assets-pando.s3.amazonaws.com/assets/150922_MEXICOLECTIVO_LOGO_RESPONSIVO_VERDE.png" alt="">
