--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -138,7 +138,7 @@
   </div>
 
   <div class="set-12 ds-page">
-    <img src="../../assets/images/150922_MEXICOLECTIVO_LOGO_RESPONSIVO_VERDE.png" alt="">
+    <div class="app-footer"></div>
     <!-- <div class="info">
       <div class="titles">
         <span class="line">&nbsp;</span>
