--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.html
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="set-12 ctrls">
-        <button type="submit" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+        <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
           <small>Cancelar</small>
         </button>
         <button type="submit" mat-raised-button color="primary"
