--- a/src/app/components/add-document-theme/add-document-theme.component.scss
+++ b/src/app/components/add-document-theme/add-document-theme.component.scss
@@ -4,6 +4,11 @@
   .dialog-head {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+
+    * {
+      margin: 0;
+    }
   }
 
   ::ng-deep .mat-step-header:hover,
@@ -102,6 +107,8 @@
   }
 
   .topic {
+    margin-bottom: 10px;
+
     h3 {
       margin-bottom: 10px;
     }
@@ -114,7 +121,7 @@
   .loading {
     mat-spinner {
       position: absolute;
-      top: 60%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
