--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -93,7 +93,7 @@
       height: 30px;
       border-radius: 100%;
       overflow: hidden;
-      background: #f1f1f1;
+      background: #1e7e7f;
       margin-left: 0 !important;
       border: 1px solid rgba($color: #000000, $alpha: 0.1);
 
@@ -103,7 +103,7 @@
         align-items: center;
         justify-content: center;
         height: 100%;
-        background: #f1f1f1;
+        background: #1e7e7f;
       }
 
       img {
