--- a/src/app/hub/components/editor-template/editor-template.component.html
+++ b/src/app/hub/components/editor-template/editor-template.component.html
@@ -40,7 +40,7 @@
                   <mat-icon color="primary">more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item type="button">
+                  <button mat-menu-item type="button" (click)="viewDocument(document)">
                     <mat-icon color="primary">pie_chart</mat-icon>
                     <span>Ver datos</span>
                   </button>
