--- a/src/app/hub/single-user/single-user.component.scss
+++ b/src/app/hub/single-user/single-user.component.scss
@@ -39,6 +39,21 @@
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 
+    .empty-img {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(206, 221, 255, 0.4);
+      cursor: pointer;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+
+      mat-icon {
+        font-size: 40pt;
+        color: rgba(0, 0, 0, 0.1);
+      }
+    }
+
     img {
       width: 100%;
       height: 100%;
