--- a/src/app/hub/user-notifications/user-notifications.component.scss
+++ b/src/app/hub/user-notifications/user-notifications.component.scss
@@ -29,6 +29,16 @@
       overflow: hidden;
       background: #f1f1f1;
       margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        float: left;
+      }
     }
   }
 }
