--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -8,7 +8,7 @@
     padding: 0 40px;
     // background: rgba($color: #ffffff, $alpha: 0.9);
     background: rgb(0, 3, 29);
-    background: linear-gradient(360deg, rgba(0, 3, 29, 0) 0%, rgba(0, 3, 29, 0.75) 100%);
+    // background: linear-gradient(360deg, rgba(0, 3, 29, 0) 0%, rgba(0, 3, 29, 0.75) 100%);
     box-shadow: 0;
     // background: transparent;
     position: fixed;
@@ -93,7 +93,7 @@
       height: 30px;
       border-radius: 100%;
       overflow: hidden;
-      background: #f1f1f1;
+      background: #1e7e7f;
       margin-left: 0 !important;
       border: 1px solid rgba($color: #000000, $alpha: 0.1);
 
@@ -103,7 +103,7 @@
         align-items: center;
         justify-content: center;
         height: 100%;
-        background: #f1f1f1;
+        background: #1e7e7f;
       }
 
       img {
