fix panel subcategory

--- a/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.html
+++ b/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.html
@@ -13,8 +13,12 @@
     *ngFor="let item of categories"
   >
     <!-- <div class="box sb4">I'm speech bubble</div> -->
-    <span (click)="redirect(item._id)" style="cursor: pointer"
-      >{{ item.title }}
+    <span
+      (click)="redirect(item._id)"
+      style="cursor: pointer"
+      [matTooltip]="item.title.toUpperCase()"
+      matTooltipClass="tooltip"
+      >{{ item.shortTitle }}
       <div class="sb4"></div>
     </span>
   </div>
