--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -165,6 +165,7 @@
         <div class="set-4">
           <public-documents-testimonials
             [data]="topic.testimonials"
+            [image]="image"
           ></public-documents-testimonials>
         </div>
       </div>
