--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -112,7 +112,8 @@
             (click)="popAddCommentsDialog()">
             <mat-icon>add_comment</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Colaborador">
+          <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Colaborador"
+            (click)="popAddDocumentCollaborator()">
             <mat-icon>person_add</mat-icon>
           </button>
           <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Sub Categoría"
