--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -63,10 +63,11 @@
               </mat-menu>
             </div>
           </div>
-          <p class="card-description" *ngIf="document.description != null">{{document.description}}</p>
-          <!-- <button type="button" class="toolbtn" *ngIf="document.description == null">
-            <small>Agregar descripción</small>
-          </button> -->
+          <p class="card-description" *ngIf="document.description != null">
+            {{ (document.description.length > 200) ? (document.description | slice: 0 : 200) + '..' :
+            (document.description) }}
+          </p>
+          <button type="button" class="card-description link" (click)="popDescriptionViewerDialog()">Leer más</button>
           <avatars-row [users]="collaborators"></avatars-row>
         </div>
       </mat-card>
