--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,7 @@
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
-  src: url("./assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2")
-    format("woff2");
+  src: url("./assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2") format("woff2");
 }
 
 .material-icons {
@@ -508,14 +507,12 @@ mat-form-field {
   }
 
   .facebook-net {
-    background: url("./assets/images/iconfinder_1_Facebook_colored_svg_copy_5296499.png")
-      no-repeat;
+    background: url("./assets/images/iconfinder_1_Facebook_colored_svg_copy_5296499.png") no-repeat;
     background-size: 100%;
   }
 
   .instagram-net {
-    background: url("./assets/images/iconfinder_social_media_applications_3-instagram_4102579.png")
-      no-repeat;
+    background: url("./assets/images/iconfinder_social_media_applications_3-instagram_4102579.png") no-repeat;
     background-size: 100%;
   }
 }
