finish two task

--- a/src/app/components/add-document-testimony/add-document-testimony.component.scss
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.scss
@@ -1,95 +1,109 @@
 :host {
-    .form-body {
-      margin-top: 20pt;
-     
-  
-      > * {
-        margin: 0;
-      }
-  
-      textarea {
-        height: 100pt;
-      }
-  
-      .imagebox {
-        border-color: #636363;
-        border-style: dashed;
-        border-width: 1px;
+  .form-body {
+    margin-top: 20pt;
+
+    > * {
+      margin: 0;
+    }
+
+    textarea {
+      height: 100pt;
+    }
+
+    .imagebox {
+      border-color: #636363;
+      border-style: dashed;
+      border-width: 1px;
+      width: 100%;
+      min-height: 100pt;
+      height: auto;
+      margin-bottom: 50pt;
+      position: relative;
+      border-radius: 5px;
+
+      label {
         width: 100%;
-        min-height: 100pt;
-        height: auto;
-        margin-bottom: 50pt;
-        position: relative;
-        border-radius: 5px;
-  
-        label {
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          font-size: 12pt;
-          user-select: none;
-          z-index: 3;
-          cursor: pointer;
-          position: absolute;
-          top: 0;
-          left: 0;
-          transition: all 390ms linear;
-          box-sizing: border-box;
-  
-          &.data {
-            background-color: rgba(250, 250, 250, 0.5);
-            opacity: 0;
-  
-            &:hover {
-              opacity: 0.5;
-            }
-          }
-  
-          mat-icon {
-            font-size: 25pt;
-            color: #306eff;
-          }
-  
-          span {
-            margin-top: 8pt;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-size: 12pt;
+        user-select: none;
+        z-index: 3;
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 390ms linear;
+        box-sizing: border-box;
+
+        &.data {
+          background-color: rgba(250, 250, 250, 0.5);
+          opacity: 0;
+
+          &:hover {
+            opacity: 0.5;
           }
         }
-  
-        .preview {
-          width: 100%;
-          // height: 100%;A
-          object-fit: cover;
-          transition: opacity 450ms linear;
-          z-index: 2;
-  
-          &.empty {
-            opacity: 0;
-          }
-  
-          &.data {
-            opacity: 1;
-          }
+
+        mat-icon {
+          font-size: 25pt;
+          color: #306eff;
+        }
+
+        span {
+          margin-top: 8pt;
+        }
+      }
+
+      .preview {
+        width: 100%;
+        // height: 100%;A
+        object-fit: cover;
+        transition: opacity 450ms linear;
+        z-index: 2;
+
+        &.empty {
+          opacity: 0;
+        }
+
+        &.data {
+          opacity: 1;
         }
       }
     }
-    .submit-button {
-      display: block;
-      margin: 0 auto;
-      margin-top: -5pt;
+    .visibility-container {
+      width: 200px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      position: relative;
+      left: 383px;
+      bottom: 17px;
+      .visibility {
+        width: 25%;
+        height: 80%;
+        margin-right: 2px;
+      }
+      small {
+        margin: 0px;
+      }
     }
   }
-  
-
-  .messageError{
-
-    color: red;
-    margin-right: 20%;
+  .submit-button {
     display: block;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: -34px;
+    margin: 0 auto;
+    margin-top: -5pt;
   }
+}
+
+.messageError {
+  color: red;
+  margin-right: 20%;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: -34px;
+}
