--- a/src/app/public-documents/components/modal-testimony/modal-testimony.component.html
+++ b/src/app/public-documents/components/modal-testimony/modal-testimony.component.html
@@ -17,10 +17,10 @@
 <div class="set-12 dialog-body">
   <form [formGroup]="addTestimonyFormGroup">
     <div class="form-body">
-      <mat-form-field class="example-full-width" appearance="outline">
+      <!-- <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Nombre</mat-label>
         <input matInput placeholder="Nombre" />
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Escribe una descripción o carga un documento</mat-label>
