Show the algorithm and fix some tasks

--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -15,13 +15,11 @@
 </div>
 
 <div class="set-12 dialog-body">
-  <form [formGroup]="addTestimonyFormGroup" (submit)="createTestimony(addTestimonyFormGroup)">
+  <form
+    [formGroup]="addTestimonyFormGroup"
+    (submit)="createTestimony(addTestimonyFormGroup)"
+  >
     <div class="form-body">
-      <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Nombre</mat-label>
-        <input matInput placeholder="Nombre" formControlName="name" />
-      </mat-form-field>
-
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Escribe una descripción o carga un documento</mat-label>
         <textarea
@@ -52,9 +50,11 @@
       </div> -->
     </div>
     <div class="messageError">
-      <span *ngIf="messageError" class="messageError">Titulo y descripción son requeridos.</span>
+      <span *ngIf="messageError" class="messageError"
+        >Titulo y descripción son requeridos.</span
+      >
     </div>
-    
+
     <div class="set-12 ctrls">
       <button
         type="submit"
