--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -120,15 +120,9 @@
                 (click)="popImageViewer()"
               />
               <div class="info">
-                <button class="custom-circle">
-                  <mat-icon>thumb_up</mat-icon>
-                </button>
-
                 <div class="actions">
                   <p>Relevancia ciudadana</p>
-                  <p class="votes">
-                    {{ votes }}
-                  </p>
+                  <p class="votes">{{ rank.totalPoints }} / 100</p>
                   <button
                     *ngIf="userVoted"
                     mat-raised-button
@@ -136,7 +130,7 @@
                     disabled
                     style="background-color: #d9d9d9"
                   >
-                    Ya votaste
+                    Votos: {{ votes }}
                   </button>
                   <button
                     *ngIf="!userVoted"
