--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -270,6 +270,35 @@
             text-decoration: underline;
             color: #306eff;
           }
+          .favorites-button {
+            position: relative;
+            bottom: 187px;
+            left: 121px;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+
+            .mat-button.mat-warn,
+            .mat-icon-button.mat-warn,
+            .mat-stroked-button.mat-warn {
+              background: #e98282;
+              color: #ffffff;
+              font-size: 15px;
+              width: 32px;
+              height: 32px;
+              border: solid;
+              border-color: #ffffff;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+            .mat-icon-button i,
+            .mat-icon-button .mat-icon {
+              line-height: 24px;
+              font-size: 14px;
+            }
+          }
         }
       }
     }
