--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
@@ -10,7 +10,7 @@
             <small>Usuarios</small>
           </p>
           <p class="amount">
-            <small>{{ 130 }}</small>
+            <small>{{ users }}</small>
           </p>
         </div>
       </div>
@@ -28,7 +28,7 @@
             <small>Interacciones</small>
           </p>
           <p class="amount">
-            <small>{{ 100 }}</small>
+            <small>{{ interactions }}</small>
           </p>
         </div>
       </div>
