--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
 <div class="set-12 mainhldr">
-  <div
-    class="app-pagelet"
-    [user]="user"
-    [path]="path"
-    *ngIf="isDataAvailable"
-  ></div>
+  <div class="app-pagelet" [user]="user" [path]="path" *ngIf="isDataAvailable"></div>
 
   <router-outlet></router-outlet>
   <!-- <div class="message-box" [user]="user" *ngIf="isDataAvailable"></div> -->
 </div>
 
-<!-- <div class="set-12 app-footer"></div> -->
+<!-- <div class="app-footer" *ngIf="isDataAvailable"></div> -->
