--- a/src/app/components/add-document-dialog/add-document-dialog.component.html
+++ b/src/app/components/add-document-dialog/add-document-dialog.component.html
@@ -18,9 +18,9 @@
         <mat-form-field appearance="outline">
           <mat-label>Cobertura</mat-label>
           <mat-select formControlName="coverage" multiple (selectionChange)="onSelectCoverage($event)" #coverageSelect>
-            <mat-option value="all">
+            <!-- <mat-option value="all">
               <small>Nacional</small>
-            </mat-option>
+            </mat-option> -->
             <mat-option *ngFor="let state of states" [value]="state._id">
               <small>{{state.name | titlecase}}</small>
             </mat-option>
