--- a/src/app/components/complete-registration/complete-registration.component.html
+++ b/src/app/components/complete-registration/complete-registration.component.html
@@ -1,31 +1,119 @@
 <div class="set-12 dialog-head">
   <h1>¡Hola!</h1>
   <h3>¡Bienvenido a PANDO!</h3>
-  <p>Antes de continuar necesitamos algunos datos</p>
+  <p>
+    <small>Antes de continuar necesitamos algunos datos</small>
+  </p>
 </div>
 
 <div class="set-12 dialog-body">
-  <form class="set-12" [formGroup]="formGroup" (submit)="onCompleteRegistration(formGroup)">
-    <div class="set-12">
-      <div class="set-6">
-        <mat-form-field appearance="outline">
-          <mat-label>Nombre(s)</mat-label>
-          <input type="text" matInput formControlName="firstname">
-        </mat-form-field>
-      </div>
+  <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
+    <mat-step [stepControl]="stepOneFormGroup">
+      <ng-template matStepLabel>
+        <small>Escribe tu nombre</small>
+      </ng-template>
 
-      <div class="set-6">
-        <mat-form-field appearance="outline">
-          <mat-label>Apellido(s)</mat-label>
-          <input type="text" matInput formControlName="lastname">
-        </mat-form-field>
-      </div>
-    </div>
+      <form class="set-12" [formGroup]="stepOneFormGroup">
+        <div class="set-12">
+          <div class="set-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Nombre(s)</mat-label>
+              <input type="text" matInput formControlName="firstname">
+            </mat-form-field>
+          </div>
 
-    <div class="set-12 ctrls txt-right">
-      <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid">
-        Guardar
-      </button>
-    </div>
-  </form>
+          <div class="set-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Apellido(s)</mat-label>
+              <input type="text" matInput formControlName="lastname">
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="set-12 ctrls txt-right">
+          <button type="button" mat-raised-button color="accent" matStepperNext [disabled]="stepOneFormGroup.invalid">
+            <small>Siguiente</small>
+          </button>
+          <!-- <button type="submit" mat-raised-button color="primary" [disabled]="stepOneFormGroup.invalid">
+            <small>Guardar</small>
+          </button> -->
+        </div>
+      </form>
+    </mat-step>
+
+    <mat-step [stepControl]="stepTwoFormGroup">
+      <ng-template matStepLabel>
+        <small>Teléfono / C.P.</small>
+        <p>
+          <small>Opcional</small>
+        </p>
+      </ng-template>
+
+      <form>
+        <div class="set-12">
+          <div class="set-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Teléfono</mat-label>
+              <input type="text" matInput>
+            </mat-form-field>
+          </div>
+
+          <div class="set-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Código postal</mat-label>
+              <input type="text" matInput>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="set-12 ctrls txt-right">
+          <button type="button" mat-raised-button color="accent" matStepperPrevious>
+            <small>Atrás</small>
+          </button>
+          <button type="button" mat-raised-button color="accent" matStepperNext>
+            <small>Siguiente</small>
+          </button>
+        </div>
+      </form>
+    </mat-step>
+
+    <mat-step [stepControl]="stepThreeFormGroup">
+      <ng-template matStepLabel>
+        <small>Giro / Gremio</small>
+      </ng-template>
+
+      <form>
+        <div class="set-12">
+          <div class="set-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Tipo</mat-label>
+              <mat-select>
+                <mat-option></mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div class="set-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Nombre</mat-label>
+              <input type="text" matInput>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="set-12"></div>
+
+        <div class="set-12"></div>
+
+        <div class="set-12 ctrls txt-right">
+          <button type="button" mat-raised-button color="accent" matStepperPrevious>
+            <small>Atrás</small>
+          </button>
+          <button type="button" mat-raised-button color="primary" (click)="onCompleteRegistration()">
+            <small>Guardar</small>
+          </button>
+        </div>
+      </form>
+    </mat-step>
+  </mat-stepper>
 </div>
