--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -32,7 +32,8 @@
           <div class="set-12 card-title">
             <div class="set-10">{{document.title}}</div>
             <div class="set-2 txt-right">
-              <button type="button" [matMenuTriggerFor]="menu">
+              <button type="button" [matMenuTriggerFor]="menu"
+                [disabled]="!actionControlActivityList.includes(user.activityName)">
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
@@ -68,7 +69,8 @@
             (document.description) }}
           </p>
           <button type="button" class="card-description link" (click)="popDescriptionViewerDialog()">Leer más</button>
-          <avatars-row [users]="collaborators"></avatars-row>
+          <avatars-row [users]="collaborators" *ngIf="actionControlActivityList.includes(user.activityName)">
+          </avatars-row>
         </div>
       </mat-card>
 
@@ -112,7 +114,7 @@
           </mat-form-field>
         </div>
 
-        <div class="set-8 txt-right">
+        <div class="set-8 txt-right" *ngIf="actionControlActivityList.includes(user.activityName)">
           <button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Comentario"
             (click)="popAddCommentsDialog()">
             <mat-icon>add_comment</mat-icon>
@@ -160,50 +162,6 @@
         </div>
       </div>
 
-      <!-- <div class="set-12">
-        <mat-card class="set-12 info-lists">
-          <div class="set-4">
-            <div class="inner-card">
-              <div class="set-4">
-                <span class="roundico-green">
-                  <mat-icon>groups</mat-icon>
-                </span>
-              </div>
-              <div class="set-8">
-                <p><small>Usuarios</small></p>
-                <strong>{{collaborators.length}}</strong>
-              </div>
-            </div>
-
-            <div class="inner-card">
-              <div class="set-4">
-                <span class="roundico-orange">
-                  <mat-icon>front_hand</mat-icon>
-                </span>
-              </div>
-              <div class="set-8">
-                <p><small>Interacciones</small></p>
-                <strong>0</strong>
-              </div>
-            </div>
-          </div>
-
-          <div class="set-4">
-            <p class="list-title">
-              <small>Soluciones</small>
-              <mat-icon class="icon-insights">insights</mat-icon>
-            </p>
-          </div>
-
-          <div class="set-4">
-            <p class="list-title">
-              <small>Problemas</small>
-              <mat-icon class="icon-warnings">warning</mat-icon>
-            </p>
-          </div>
-        </mat-card>
-      </div> -->
-
       <div class="set-12 category-list">
         <mat-card class="set-12">
           <div class="set-12 table-head">
@@ -225,8 +183,9 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef=" let element">
-                <button type="button" class="catbtn"
+                <button type="button" class="catbtn" [disabled]="!element.access"
                   (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)">
+                  <mat-icon>question_answer</mat-icon>
                   <small>{{element.categoryName}}</small>
                 </button>
               </td>
@@ -270,36 +229,34 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> </th>
               <td mat-cell *matCellDef="let element">
-                <button mat-icon-button [matMenuTriggerFor]="menu">
+                <button type="button" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!element.access">
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item
+                  <button type="button" mat-menu-item
                     (click)="LinkMe('/documentos-publicos/' + document._id + '/categoria/' + element._id)">
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
-                  <button mat-menu-item (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)">
+                  <button type="button" mat-menu-item
+                    (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)">
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
-                  <button mat-menu-item>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <button mat-menu-item>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>drag_handle</mat-icon>
                     <small>Duplicar</small>
                   </button>
-                  <button mat-menu-item>
-                    <mat-icon>file_copy</mat-icon>
-                    <small>Copiar</small>
-                  </button>
-                  <button mat-menu-item>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
                   </button>
-                  <button mat-menu-item (click)="killLayout(element)">
+                  <button type="button" mat-menu-item (click)="killLayout(element)"
+                    *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>delete</mat-icon>
                     <small>Eliminar</small>
                   </button>
