--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -39,7 +39,8 @@
           <div class="set-12 card-title">
             <div class="set-10">{{ subcategory.category.name }}</div>
             <div class="set-2 txt-right">
-              <button type="button" [matMenuTriggerFor]="menu">
+              <button type="button" [matMenuTriggerFor]="menu"
+                [disabled]="!actionControlActivityList.includes(user.activityName)">
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
@@ -62,7 +63,8 @@
           <button type="button" class="toolbtn" *ngIf="subcategory.description == null">
             <small>Agregar descripción</small>
           </button>
-          <avatars-row [users]="collaborators"></avatars-row>
+          <avatars-row [users]="collaborators" *ngIf="actionControlActivityList.includes(user.activityName)">
+          </avatars-row>
         </div>
       </mat-card>
     </div>
@@ -82,11 +84,12 @@
 
         <div class="set-8 txt-right">
           <button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Comentario"
-            matTooltipClass="tooltip" (click)="popAddCommentsDialog()">
+            matTooltipClass="tooltip" (click)="popAddCommentsDialog()"
+            *ngIf="actionControlActivityList.includes(user.activityName)">
             <mat-icon>add_comment</mat-icon>
           </button>
           <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Colaborador"
-            matTooltipClass="tooltip">
+            matTooltipClass="tooltip" *ngIf="actionControlActivityList.includes(user.activityName)">
             <mat-icon>person_add</mat-icon>
           </button>
           <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Tema"
@@ -155,6 +158,7 @@
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
                 <button type="button" class="catbtn" (click)="linkTopic(element._id)">
+                  <mat-icon>question_answer</mat-icon>
                   <small>{{element.title}}</small>
                 </button>
               </td>
@@ -191,47 +195,38 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <button mat-icon-button [matMenuTriggerFor]="menu">
+                <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item
+                  <button type="button" mat-menu-item
                     (click)="linkMe('/documentos-publicos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + subcategory._id + '/tema/' + element._id)">
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
-                  <button mat-menu-item
+                  <button type="button" mat-menu-item
                     (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + subcategory._id + '/temas/' + element._id)">
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
-                  <button mat-menu-item>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <button mat-menu-item>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>drag_handle</mat-icon>
                     <small>Duplicar</small>
                   </button>
-                  <button mat-menu-item>
-                    <mat-icon>file_copy</mat-icon>
-                    <small>Copiar</small>
-                  </button>
-                  <button mat-menu-item>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
                   </button>
-                  <button mat-menu-item (click)="killTopic(element)">
+                  <button type="button" mat-menu-item (click)="killTopic(element)"
+                    *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>delete</mat-icon>
                     <small>Eliminar</small>
                   </button>
                 </mat-menu>
-                <!-- <mat-menu #menu="matMenu">
-                  <button mat-menu-item>
-                    <mat-icon>edit</mat-icon>
-                    <span>Editar tema</span>
-                  </button>
-                </mat-menu> -->
               </td>
             </ng-container>
 
