--- a/src/app/hub/single-user/single-user.component.html
+++ b/src/app/hub/single-user/single-user.component.html
@@ -58,5 +58,9 @@
     <div class="set-12" *ngIf="!haveRootPermissions">
       <div class="editor-template" [user]="user" [documents]="documents"></div>
     </div>
+
+    <div class="set-12" *ngIf="userActivities.includes('citizen')">
+      <div class="editor-template" [user]="user" [documents]="documents"></div>
+    </div>
   </div>
 </div>
