--- a/src/app/hub/components/editor-template/editor-template.component.html
+++ b/src/app/hub/components/editor-template/editor-template.component.html
@@ -53,16 +53,6 @@
                     <span>Abrir privado</span>
                   </button>
                 </mat-menu>
-
-                <!-- <button type="button" matTooltip="Editar">
-                  <mat-icon>edit</mat-icon>
-                </button>
-                <button type="button" matTooltip="Abrir" (click)="linkMe('/documentos/' + document._id)">
-                  <mat-icon>description</mat-icon>
-                </button>
-                <button type="button" matTooltip="Datos">
-                  <mat-icon>pie_chart</mat-icon>
-                </button> -->
               </div>
             </div>
 
@@ -94,7 +84,7 @@
                 <ul>
                   <li>
                     <button type="button" (click)="linkMe('/documentos/' + document._id + '/categoria/' + layout._id)"
-                      matTooltip="Abrir categoría" matTooltipClass="tooltip" matTooltipPosition="right">
+                      matTooltip="Abrir categoría" matTooltipClass="tooltip" matTooltipPosition="right" [disabled]="!layout.access">
                       <span style="font-size: 14px">{{layout.category.name}}</span>
                     </button>
                   </li>
